edit item design home

--- a/src/app/Components/main/main.component.html
+++ b/src/app/Components/main/main.component.html
@@ -1,52 +1,3 @@
-<div class="my-5 text-center container">
-   <div class="row d-flex align-items-center">
-
-      <div class="col-10">
-         <!--Start carousel-->
-         <div id="demo2" class="carousel slide" data-ride="carousel">
-
-            <div class="carousel-inner">
-               <div class="carousel-item active">
-                  <div class="row">
-                     <div style="background-image:url('assets/crousal dev 1.jpg');" class="col-12 col-md d-flex align-items-center justify-content-center">
-                     </div>
-                     <div style="background-image:url('assets/crousal dev 1.jpg');" class="col-12 col-md d-flex align-items-center justify-content-center">
-                     </div>
-                     <div style="background-image:url('assets/crousal dev 1.jpg');" class="col-12 col-md d-flex align-items-center justify-content-center">
-                        <h3 class="text-white">Text in the panel.</h3>
-                     </div>
-                  </div>
-               </div>
-               <div class="carousel-item">
-                  <div class="row">
-                     <div style="background-image:url('assets/crousal dev 1.jpg');" class="col-12 col-md d-flex align-items-center justify-content-center">
-                     </div>
-                     <div style="background-image:url('assets/crousal dev 1.jpg');" class="col-12 col-md d-flex align-items-center justify-content-center">
-                     </div>
-                     <div style="background-image:url('assets/crousal dev 1.jpg');" class="col-12 col-md d-flex align-items-center justify-content-center">
-                     </div>
-                  </div>
-               </div>
-
-                 <a class="carousel-control-prev" href="#demo2"  data-slide="prev" >
-                  <span class="carousel-control-prev-icon"></span>
-                </a>
-                <a class="carousel-control-next" href="#demo2" data-slide="next">
-                  <span class="carousel-control-next-icon"></span>
-                </a>
-
-            </div>
-         </div>
-         <!--End carousel-->
-      </div>
-   </div>
-</div>
-
-
-
-
-
-
 <div class="container-fluid">
   <div class="row mt-3">
     <div class="col-md-12">
@@ -163,9 +114,123 @@
         </div>
       </div>
     </div>
+  </div>
+</div>
 
-    <div class="container">
+
+  <div class="container">
+<!-- search -->
       <div class="row mt-3">
+
+        <div class="col-3 mt-3">
+          <div class="input-group mb-3 col-12">
+            <div class="input-group-prepend">
+              <span class="input-group-text" id="basic-addon1">price</span>
+            </div>
+            <input
+              type="number"
+              class="form-control"
+              placeholder="prdprice"
+              aria-label="prdprice"
+              [(ngModel)]="prdprice"
+              aria-describedby="basic-addon1"
+            />
+          </div>
+        </div>
+        <div class="col-3 mt-3">
+          <div class="input-group mb-3 w-100 col-12">
+            <div class="input-group-prepend">
+              <span class="input-group-text" id="basic-addon1">Name</span>
+            </div>
+            <input
+              type="text"
+              class="form-control"
+              placeholder="prodName"
+              aria-label="prodName"
+              [(ngModel)]="prodName"
+              aria-describedby="basic-addon2"
+            />
+          </div>
+        </div>
+
+        <!-- search -->
+        <div class="col-3 mt-4">
+          <select
+          #sel
+          class="form-control btn btn-primary col-12"
+          style="background-color: wheat; margin-top: -10px"
+          name="category"
+          id="cars"
+          class="form-control"
+          [(ngModel)]="SelectedCategory">
+          <option *ngFor="let cat of categoryArray" [value]="cat.CATName">
+            {{ cat.CATName }}
+          </option>
+        </select>
+        </div>
+        <div class="col-3 mt-2">
+          <button class="btn btn-warning mt-2 " style="width: 100px;" (click)="onSave()">Search</button>
+        </div>
+      </div>
+<!-- end serach -->
+
+
+
+      <!------------------------------------------------------------------------------------------------------------------>
+</div>
+
+<!-- items  -->
+<div class="container">
+
+    <div class="row mt-3">
+      <div class="col-lg-3 col-md-3 col-xl-3 " *ngFor="let item of data">
+        <div class="card mt-2 first">
+          <div  class="product-item  p-0"  >
+            <div class="product-image">
+              <img class="card-img-top" src="{{imgDirectory}}{{item.PRDImage}}"
+              alt="Card image cap" height="220" />
+            <div class="product-action">
+              <a  (click)="addtocard(item.id)"><i class="fa fa-cart-plus"></i></a>
+              <a [routerLink]="['/product' ,item.id]"><i class="fa fa-search" ></i></a>
+
+              <!-- <a href="#"><i class="fa fa-heart"></i></a> -->
+
+            </div>
+            </div>
+          </div>
+          <!-- <img class="card-img-top" src="{{imgDirectory}}{{item.PRDImage}}" alt="Card image cap" /> -->
+          <div class="card-body">
+            <div class="caption">
+              <div class="caption-top">
+                <h5 class="float-right badge-warning ">
+                  {{ item.PRDPrice| currency }}
+                </h5>
+                <h5>
+                  <a [routerLink]="['/product', item.id]">{{ item.PRDName }}</a>
+                </h5>
+              </div>
+            </div>
+            <p>Lorem ipsum dolor sit amet.</p>
+            <a class="btn info m-1" [routerLink]="['/product' ,item.id]">details</a>
+            <a class="btn success " (click)="addtocard(item.id)">add to card</a>
+          </div>
+        </div>
+      </div>
+
+  </div>
+
+</div>
+
+
+<!-- tiger -->
+  <a class="btn btn-warning" [routerLink]="['/order']">my card</a>
+
+  <a class="btn warning" [routerLink]="['/order']">my card</a>
+
+
+
+
+      <!-- <div class="row mt-3">
         <div class="col-md-4">
           <span>{{ prodName }}</span>
           <input type="text" [(ngModel)]="prodName" placeholder="item name" />
@@ -188,51 +253,24 @@
 
             <input type="submit" name="save" />
           </form>
-
-
         </div>
-      </div>
+      </div> -->
       <!---------------------------------------------------------------------------------->
+    <!-- <div class="col-md-3" *ngFor="let item of data">
+        <div class="card mt-2" style="width: 20rem">
+  </div>
+  <div class="ratting">
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+              </div>
+</div> -->
+<!--
 
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-md-4">
-            <div class="product-item">
-              <div class="product-image">
-                <ul class="">
-                  <li class="new mt-4"><span>New</span></li>
-                </ul>
-                <a href="product-detail.html">
-                  <img
-                    src="http://demo.posthemes.com/pos_haltico/91-home_default/720-degree-panoramic-hd-360-video-vr-cameras-dual.jpg"
-                    alt="720 Degree Panoramic HD 360..."
-                  />
-                </a>
-                <div class="product-action">
-                  <a href="#"><i class="fa fa-cart-plus"></i></a>
-                  <a href="#"><i class="fa fa-heart"></i></a>
-                  <a href="#"><i class="fa fa-search"></i></a>
-                </div>
-              </div>
-              <div>
-                <a href="#" class="link"
-                  ><i>720 Degree Panoramic HD 360 Video VR Cameras Dual</i></a
-                >
-              </div>
-              <div class="ratting">
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-              </div>
-              <div>
-                <b class="text-primary"><span>$</span>29.00</b>
-              </div>
-            </div>
-          </div>
 
-          <div class="col-md-4">
+    <div class="col-md-4">
             <div class="product-item">
               <div class="product-image">
                 <ul class="">
@@ -303,95 +341,43 @@
               </div>
             </div>
           </div>
-        </div>
-      </div>
 
-      <!------------------------------------------------------------------------------------------------------------------>
-      <div class="col-md-3" *ngFor="let item of data">
-        <div class="card mt-2" style="width: 20rem">
-  </div>
 
-  <div class="row mt-3">
-    <div class="col-3 mt-3">
-      <div class="input-group mb-3 col-12">
-        <div class="input-group-prepend">
-          <span class="input-group-text" id="basic-addon1">price</span>
-        </div>
-        <input
-          type="number"
-          class="form-control"
-          placeholder="prdprice"
-          aria-label="prdprice"
-          [(ngModel)]="prdprice"
-          aria-describedby="basic-addon1"
-        />
-      </div>
-    </div>
-    <div class="col-3 mt-3">
-      <div class="input-group mb-3 w-100 col-12">
-        <div class="input-group-prepend">
-          <span class="input-group-text" id="basic-addon1">Name</span>
-        </div>
-        <input
-          type="text"
-          class="form-contro2"
-          placeholder="prodName"
-          aria-label="prodName"
-          [(ngModel)]="prodName"
-          aria-describedby="basic-addon2"
-        />
-      </div>
-    </div>
-    <div class="col-3 mt-4">
-      <select
-      #sel
-      class="form-control btn btn-primary col-12"
-      style="background-color: wheat; margin-top: -10px"
-      name="category"
-      id="cars"
-      class="form-control"
-      [(ngModel)]="SelectedCategory">
-      <option *ngFor="let cat of categoryArray" [value]="cat.CATName">
-        {{ cat.CATName }}
-      </option>
-    </select>
-    </div>
-    <div class="col-3 mt-2">
-      <button class="btn btn-warning mt-2 " style="width: 100px;" (click)="onSave()">Search</button>
-    </div>
-  </div>
+          div item------ geoegre animal
 
-  <div class="row mt-3">
-      <div class="col-3 ml-2" *ngFor="let item of data">
-        <div class="card mt-2 first" style="width: 20rem">
-          <img class="card-img-top" src="{{imgDirectory}}{{item.PRDImage}}" alt="Card image cap" />
-          <div class="card-body">
-            <div class="caption">
-              <div class="caption-top">
-                <h5 class="float-right badge-warning  p-1">
-                  {{ item.PRDPrice }}
-                </h5>
-                <h5>
-                  <a href="product.html">{{ item.PRDName }}</a>
-                  <a [routerLink]="['/product', item.id]">{{ item.PRDName }}</a>
-                </h5>
+      <div class="container-fluid">
+        <div class="row">
+
+          <div class="col-md-3"  *ngFor="let item of data">
+            <div class="product-item">
+              <div class="product-image">
+                <ul class="">
+                  <li class="new mt-4"><span>New</span></li>
+                </ul>
+                <a href="product-detail.html">
+                  <img
+                    src="{{imgDirectory}}{{item.PRDImage}}"
+                    alt="720 Degree Panoramic HD 360..."
+                  />
+                </a>
+                <div class="product-action">
+                  <a href="#"><i class="fa fa-cart-plus"></i></a>
+                  <a href="#"><i class="fa fa-heart"></i></a>
+                  <a href="#"><i class="fa fa-search"></i></a>
+                </div>
+              </div>
+              <div>
+                <a href="#" class="link"
+                  ><i>720 Degree Panoramic HD 360 Video VR Cameras Dual</i></a
+                >
+              </div>
+
+              <div>
+                <b class="text-primary"><span>$</span>29.00</b>
               </div>
             </div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec dignissim</p>
-            <a class="btn info m-1" [routerLink]="['/product' ,item.id]">details</a>
-            <a class="btn success " (click)="addtocard(item.id)">add to card</a>
           </div>
+
         </div>
       </div>
-    </div>
-  </div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec dignissim</p>
-           <!-- <a class="btn btn-warning" [routerLink]="['/product' ,item.id]">details</a>
-            <a class="btn btn-warning" (click)="addtocard(item.id)">add to card</a>-->
-          </div>
-        </div>
-      </div>
-  <a class="btn btn-warning" [routerLink]="['/order']">my card</a>
-
-  <a class="btn warning" [routerLink]="['/order']">my card</a>
-
+-->
