--- a/src/app/Components/footer/footer.component.html
+++ b/src/app/Components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <!-- Footer -->
-<footer class="page-footer font-small blue bg-warning mt-3">
+<footer class="page-footer font-small blue bg-warning mb-2">
 
   <!-- Copyright -->
   <div class="footer-copyright text-center py-3">© 2020 Copyright:
