--- a/src/app/Components/main/main.component.html
+++ b/src/app/Components/main/main.component.html
@@ -12,20 +12,20 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img
-              src="assets/device4.jpg"
+              src="assets/device 5.jpg"
               alt="devices1"
-              src="assets/im.jpg"
-              alt="Los Angeles"
+              src="assets/device 5.jpg"
+              alt="new model"
               class="img-responsive"
               width="100%"
               height="320px"
             />
             <div class="carousel-caption">
               <div>
-                <h1>Black friday</h1>
-                <a href="#" class="primary-btn">Shop Now</a>
+                <h1 class="text-muted"></h1>
+                <!-- <a href="#" class="primary-btn text-warning">Shop Now</a> -->
               </div>
-              <p>We had such a great time in LA!</p>
+              <!-- <p>We had such a great time in LA!</p> -->
             </div>
           </div>
           <div class="carousel-item">
@@ -42,25 +42,25 @@
             <img
               src="assets/device 5.jpg"
               alt="device 5"
-              src="assets/im.jpg"
+              src="assets/device 5.jpg"
               alt="Chicago"
               class="img-responsive"
               width="100%"
               height="320px"
             />
             <div class="carousel-caption">
-              <a href="#" class="primary-btn">Shop Now</a>
+              <!-- <a href="#" class="primary-btn">Shop Now</a> -->
               <div>
-                <h2>Sale <span>50%</span></h2>
+                <!-- <h2>Sale <span>50%</span></h2> -->
               </div>
-              <p>We love the Big Apple!</p>
+              <!-- <p>We love the Big Apple!</p> -->
             </div>
           </div>
           <div class="carousel-item">
             <img
-              src="assets/device1.jpeg"
+              src="assets/camera_category.jpeg"
               alt="device1"
-              src="assets/im.jpg"
+              src="assets/camera_category.jpg"
               alt="New York"
               class="img-responsive"
               width="100%"
@@ -89,18 +89,18 @@
                 <div class="row">
                   <div class="col-lg-5">
                     <h1>Black friday</h1>
-                    <p>
+                    <!-- <p>
                       Lorem ipsum dolor sit amet, consectetur adipisicing elit,
                       sed do eiusmod tempor incididunt ut labore et dolore
-                    </p>
-                    <a href="#" class="primary-btn">Shop Now</a>
+                    </p> -->
+                    <!-- <a href="#" class="primary-btn">Shop Now</a> -->
                   </div>
                 </div>
                 <div class="off-card">
-                  <h2>Sale <span>50%</span></h2>
+                  <!-- <h2>Sale <span>50%</span></h2> -->
                 </div>
               </div>
-              <h3>New York</h3>
+              <!-- <h3>New York</h3> -->
               <p>We love the Big Apple!</p>
             </div>
           </div>
@@ -122,7 +122,7 @@
 <!-- search -->
       <div class="row mt-3">
 
-        <div class="col-3 mt-3">
+        <div class="col-lg-3 col-md-3 col-xl-3 mt-3">
           <div class="input-group mb-3 col-12">
             <div class="input-group-prepend">
               <span class="input-group-text" id="basic-addon1">price</span>
@@ -137,7 +137,7 @@
             />
           </div>
         </div>
-        <div class="col-3 mt-3">
+        <div class="col-lg-3 col-md-3 col-xl-3 mt-3">
           <div class="input-group mb-3 w-100 col-12">
             <div class="input-group-prepend">
               <span class="input-group-text" id="basic-addon1">Name</span>
@@ -154,7 +154,7 @@
         </div>
 
         <!-- search -->
-        <div class="col-3 mt-4">
+        <div class="col-lg-3 col-md-3 col-xl-3 mt-4">
           <select
           #sel
           class="form-control btn btn-primary col-12"
@@ -168,7 +168,7 @@
           </option>
         </select>
         </div>
-        <div class="col-3 mt-2">
+        <div class="col-lg-3 col-md-3 col-xl-3 mt-2">
           <button class="btn btn-warning mt-2 " style="width: 100px;" (click)="onSave()">Search</button>
         </div>
       </div>
@@ -184,13 +184,14 @@
 
     <div class="row mt-3">
       <div class="col-lg-3 col-md-3 col-xl-3 " *ngFor="let item of data">
-        <div class="card mt-2 first">
+        <div class="card mt-2 mb-2 first">
           <div  class="product-item  p-0"  >
             <div class="product-image">
               <img class="card-img-top" src="{{imgDirectory}}{{item.PRDImage}}"
               alt="Card image cap" height="220" />
             <div class="product-action">
               <a  (click)="addtocard(item.id)"><i class="fa fa-cart-plus"></i></a>
+
               <a [routerLink]="['/product' ,item.id]"><i class="fa fa-search" ></i></a>
 
               <!-- <a href="#"><i class="fa fa-heart"></i></a> -->
@@ -210,7 +211,7 @@
                 </h5>
               </div>
             </div>
-            <p>Lorem ipsum dolor sit amet.</p>
+            <p>{{ item.PRDDesc }}</p>
             <a class="btn info m-1" [routerLink]="['/product' ,item.id]">details</a>
             <a class="btn success " (click)="addtocard(item.id)">add to card</a>
           </div>
@@ -223,9 +224,9 @@
 
 
 <!-- tiger -->
-  <a class="btn btn-warning" [routerLink]="['/order']">my card</a>
+  <!-- <a class="btn btn-warning" [routerLink]="['/order']">my card</a> -->
 
-  <a class="btn warning" [routerLink]="['/order']">my card</a>
+  <!-- <a class="btn warning" [routerLink]="['/order']">my card</a> -->
 
 
 
