--- a/src/app/Components/addproduct/addproduct.component.html
+++ b/src/app/Components/addproduct/addproduct.component.html
@@ -1,19 +1,20 @@
-
+<div class="container">
 <!-- <button class="btn btn-primary" (click)="add()">Add</button> -->
-<form #myfrom="ngForm" (ngSubmit)="add()">
+<form #myfrom="ngForm" (ngSubmit)="add()" class="mx-auto py-3">
     <!-- {{myfrom.invalid}} -->
     <div class="form-group">
-        <label for="">Name</label>
-        <input #prdName="ngModel" type="text" [(ngModel)]="prd.PRDName" class="form-control" name="pName" required minlength="3">
+        <label for=""> <b>Name </b> </label>
+        <input #prdName="ngModel" type="text" [(ngModel)]="prd.PRDName" class="form-control" name="pName" required minlength="3" placeholder="enter product name">
     </div>
     <div class="form-group">
-        <label for="">Price</label>
-        <input #prdPrice="ngModel" type="number" [(ngModel)]="prd.PRDPrice" class="form-control" name="pPrice" required min="1">
+        <label for=""><b>Price </b></label>
+        <input #prdPrice="ngModel" type="number" [(ngModel)]="prd.PRDPrice" class="form-control" name="pPrice" required min="1" placeholder="enter Price for a product">
         
     </div>
 
     <div class="form-group">
-        <select #sel  class=" form-control btn btn-primary" style=" background-color: wheat;
+        <label for=""><b>category </b></label>
+        <select #sel  class=" form-control btn btn-primary" style=" background-color: #f3f6ff; margin-top: 10px; color: black;">
              margin-top: -10px;"  name="category" id="cars" class="form-control"
               [(ngModel)]="prd.PRDCategory" >
               <option *ngFor="let cat of categoryArray;"  [value]="cat.CATName" >
@@ -27,24 +28,25 @@
     </div>
 
     <div class="form-group">
-        <label for="">Description</label>
-        <textarea class="form-control" [(ngModel)]="prd.PRDDesc" name="pDescription" rows="3" required minlength="10"></textarea>
+        <label for=""><b>Description </b></label>
+        <textarea class="form-control" [(ngModel)]="prd.PRDDesc" name="pDescription" rows="3" required minlength="10" placeholder="enter Price for a product"></textarea>
     </div>
 
     <div class="form-group">
-        <label for="">image</label>
+        <label for=""><b>Image for product </b></label>
         <input #prdimg="ngModel" type="file" [(ngModel)]="prd.PRDImage" class="form-control" name="image" required >
     </div>
 
     <div class="form-group">
-        <label for="">cost</label>
-        <input #prdcost="ngModel" type="number" [(ngModel)]="prd.PRDCost" class="form-control" name="pPrice" required >
+        <label for=""><b>Cost </b></label>
+        <input #prdcost="ngModel" type="number" [(ngModel)]="prd.PRDCost" class="form-control" name="pPrice" required placeholder="enter cost for a product">
     </div>
 
     <div class="form-group">
-        <label for="">discound</label>
-        <input #prdcost="ngModel" type="number" [(ngModel)]="prd.PRDDiscountPrice" class="form-control" name="pPrice" required >
+        <label for=""><b>Discound </b></label>
+        <input #prdcost="ngModel" type="number" [(ngModel)]="prd.PRDDiscountPrice" class="form-control" name="pPrice" required placeholder="enter Price for a product">
     </div>
 
-    <button type="submit" class="btn btn-primary" >Save</button>
+    <button type="submit" class="btn" style="background-color: gray; width: 100%; color: black;">Save</button>
 </form>
+</div>
