--- a/src/app/Components/order/order.component.html
+++ b/src/app/Components/order/order.component.html
@@ -1,1 +1,103 @@
-<p>order works!</p>
+<head>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+</head>
+<body style="background-color: white;">
+    
+
+
+
+
+
+
+
+
+
+
+
+<!-- Cart Start -->
+<div class="cart-page">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-8">
+                <div class="cart-page-inner">
+                    <div class="table-responsive">
+                        <table class="table text-center table-bordered" style="" >
+                            <thead  style="color: black;">
+                                <tr style="font-weight: bold; font-size: larger;">
+                                    <th>image</th>
+                                    <th>Product</th>
+                                    <th>Price</th>
+                                    <th>Quantity</th>
+                                    <th>Total</th>
+                                    <th>Remove</th>
+                                </tr>
+                            </thead>
+                            <tbody id="parentGORG" class="align-middle">
+                                <tr *ngFor="let index of datap; index as i">
+                                    <td>
+                                        <div class="img">
+                                            <a href="#"><img src=" assets/im.jpg" alt="Image"></a>
+                                            
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <div class="pname">
+                                           
+                                            <p>{{ datap[i][v].PRDName }}</p>
+                                        </div>
+                                    </td>
+                                    <td id="1">{{ datap[i][v].PRDPrice }}</td>
+                                    <td>
+                                        <div class="qty">
+                                            <button onclick = "remove('1','1res')" class="btn-minus"><i class="fa fa-minus"></i></button>
+                                            <input type="text" value="0" id="1N" disabled>
+                                            <button onclick="add('1','1N','1res')" class="btn-plus"><i class="fa fa-plus"></i></button>
+                                        </div>
+                                    </td>
+                                    <td id="1res">0</td>
+                                    <td><button (click)="delitem( datap[i][v].id )"><i class="fa fa-trash"></i></button></td>
+                                </tr>
+
+                              
+
+                            
+
+                              
+
+                              
+
+                               
+
+
+                                
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="cart-page-inner">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="cart-summary">
+                                <div class="cart-content">
+                                    <h1>Cart Summary</h1>
+                                    <p>Sub Total<span id="subTotal">${{totalprice}}</span></p>
+                                    <p>Shipping Cost<span>$10</span></p>
+                                    <h2>Grand Total<span id="grandTotal">${{shippingcost}}</span></h2>
+                                </div>
+                                <div class="cart-btn">
+                                    <a [routerLink]="['/Home']"><button>Update Cart</button></a>
+                                    <a href="checkout.html"><button>Checkout</button></a>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+</body>
+<!-- Cart End -->
