profile design and crausel home

--- a/src/app/Components/contact-us/contact-us.component.html
+++ b/src/app/Components/contact-us/contact-us.component.html
@@ -1,19 +1,16 @@
-<div class="container-fluid bg-dark">
-  <div class="mt-2 mb-4 pt-2 pl-2 bg-dark">
-    <h1 class="font-weight-bolder text-white text-center">CONTACT US</h1>
-  </div>
-  <div>
-    <a
-      class="nav-link font-weight-bold text-white text-center" style="font-size:25px;"
-      routerLink="/Home"
-    >
-      Home
-    </a>
-    <li class="nav-link font-weight-bold text-white d-flex">
-      <strong class="mx-auto" style="font-size:25px;"> Contact us! </strong>
-    </li>
-  </div>
-</div>
+<div class="head container-fluid">
+      <div class="mt-2 mb-4 pt-2 pl-2">
+        <h1 class="font-weight-bolder text-white text-center">Contact Us</h1>
+      </div>
+      <div>
+        <a class="nav-link font-weight-bold text-white text-center" style="font-size:25px; text-decoration:underline;" routerLink="/Home">
+          Home
+        </a>
+        <li class="nav-link font-weight-bold text-white d-flex">
+          <strong class="mx-auto" style="font-size:25px;"> Contact us! </strong>
+        </li>
+      </div>
+ </div>
 
 <div class="container-fluid pt-2 pb-2 ">
   <div class="container mt-4 mb-4 pt-4 ">
