--- a/src/app/Components/about-us/about-us.component.html
+++ b/src/app/Components/about-us/about-us.component.html
@@ -1,19 +1,17 @@
-<div class="container-fluid bg-dark">
-  <div class="mt-2 mb-4 pt-2 pl-2 bg-dark">
-    <h1 class="font-weight-bolder text-white text-center">ABOUT US</h1>
-  </div>
-  <div>
-    <a
-      class="nav-link font-weight-bold text-white text-center" style="font-size:25px;"
-      routerLink="/Home"
-    >
-      Home
-    </a>
-    <li class="nav-link font-weight-bold text-white d-flex">
-      <strong class="mx-auto" style="font-size:25px;"> About us! </strong>
-    </li>
-  </div>
-</div>
+<div class="head container-fluid">
+      <div class="mt-2 mb-4 pt-2 pl-2">
+        <h1 class="font-weight-bolder text-white text-center">About Us</h1>
+      </div>
+      <div>
+        <a class="nav-link font-weight-bold text-white text-center" style="font-size:25px; text-decoration:underline;" routerLink="/Home">
+          Home
+        </a>
+        <li class="nav-link font-weight-bold text-white d-flex">
+          <strong class="mx-auto" style="font-size:25px;"> about us! </strong>
+        </li>
+      </div>
+ </div>
+
 
 <div class = "container pt-4 pb-4">
     <div class = "row">
