--- a/src/app/Components/main/main.component.html
+++ b/src/app/Components/main/main.component.html
@@ -2,29 +2,51 @@
    <div class="row d-flex align-items-center">
 
       <div class="col-10">
-         <!--Start carousel-->
-         <div id="demo2" class="carousel slide" data-ride="carousel">
+         <div id="demo2" class="carousel slide bg-light border border-body" data-ride="carousel">
 
             <div class="carousel-inner">
                <div class="carousel-item active">
                   <div class="row">
-                     <div style="background-image:url('assets/crousal dev 1.jpg');" class="col-12 col-md d-flex align-items-center justify-content-center">
-                     </div>
-                     <div style="background-image:url('assets/crousal dev 1.jpg');" class="col-12 col-md d-flex align-items-center justify-content-center">
-                     </div>
-                     <div style="background-image:url('assets/crousal dev 1.jpg');" class="col-12 col-md d-flex align-items-center justify-content-center">
-                        <h3 class="text-white">Text in the panel.</h3>
-                     </div>
+                    <div class="col-4">
+                        <img src="assets/crousal dev 1.jpg" alt="devices1" class="img-responsive col-12 col-md d-flex align-items-center justify-content-center" width="100%" height="225px"/>
+                        <div class="carousel-caption bg-dark pb-2">
+                          <h5 class="text-center">Device 1</h5>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <img src="assets/crousal dev 3.jpg" alt="device2" class="img-responsive col-12 col-md d-flex align-items-center justify-content-center"  width="100%" height="225px"/>
+                        <div class="carousel-caption bg-dark pb-2">
+                          <h5 class="text-center">Device 2</h5>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <img src="assets/crousal dev 2.jpg" alt="device3" class="img-responsive col-12 col-md d-flex align-items-center justify-content-center"  width="100%" height="320px"/>
+                        <div class="carousel-caption bg-dark pb-2">
+                          <h5 class="text-center">Device 3</h5>
+                        </div>
+                    </div>
                   </div>
                </div>
                <div class="carousel-item">
                   <div class="row">
-                     <div style="background-image:url('assets/crousal dev 1.jpg');" class="col-12 col-md d-flex align-items-center justify-content-center">
-                     </div>
-                     <div style="background-image:url('assets/crousal dev 1.jpg');" class="col-12 col-md d-flex align-items-center justify-content-center">
-                     </div>
-                     <div style="background-image:url('assets/crousal dev 1.jpg');" class="col-12 col-md d-flex align-items-center justify-content-center">
-                     </div>
+                    <div class="col-4">
+                        <img src="assets/crousal dev 4.jpg" alt="device4" class="img-responsive col-12 col-md d-flex align-items-center justify-content-center"  width="100%" height="225px"/>
+                        <div class="carousel-caption bg-dark pb-2">
+                          <h5 class="text-center">Device 4</h5>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <img src="assets/crousal dev 5.jpg" alt="device5" class="img-responsive col-12 col-md d-flex align-items-center justify-content-center"  width="100%" height="225px"/>
+                        <div class="carousel-caption bg-dark pb-2">
+                          <h5 class="text-center">Device 5</h5>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <img src="assets/usb1.png" alt="device6" class="img-responsive col-12 col-md d-flex align-items-center justify-content-center"  width="100%" height="320px"/>
+                        <div class="carousel-caption bg-dark pb-2">
+                          <h5 class="text-center">Device 6</h5>
+                        </div>
+                    </div>
                   </div>
                </div>
 
@@ -34,10 +56,8 @@
                 <a class="carousel-control-next" href="#demo2" data-slide="next">
                   <span class="carousel-control-next-icon"></span>
                 </a>
-
             </div>
          </div>
-         <!--End carousel-->
       </div>
    </div>
 </div>
@@ -63,7 +83,6 @@
             <img
               src="assets/device4.jpg"
               alt="devices1"
-              src="assets/im.jpg"
               alt="Los Angeles"
               class="img-responsive"
               width="100%"
@@ -91,7 +110,6 @@
             <img
               src="assets/device 5.jpg"
               alt="device 5"
-              src="assets/im.jpg"
               alt="Chicago"
               class="img-responsive"
               width="100%"
@@ -109,7 +127,6 @@
             <img
               src="assets/device1.jpeg"
               alt="device1"
-              src="assets/im.jpg"
               alt="New York"
               class="img-responsive"
               width="100%"
