--- a/src/app/Components/userprofile/userprofile.component.html
+++ b/src/app/Components/userprofile/userprofile.component.html
@@ -1,111 +1,319 @@
-
-
-
-<!--our content goes here-->
+<!--our content goes here--><!--
 <div class="container content">
-    <div class="row profile">
-      <div class="col-md-3">
-        <div class="profile-sidebar position-fixed">
-          <!-- SIDEBAR USERPIC -->
-          <div class="profile-userpic">
-            <img src="https://media.rockstargames.com/chinatownwars/global/downloads/avatars/zhou_256x256.jpg" class="img-responsive" alt="">
+  <div class="row profile">
+    <div class="col-md-3">
+      <div class="profile-sidebar position-fixed">-->
+        <!-- SIDEBAR USERPIC --><!--
+        <div class="profile-userpic">
+          <img
+            src="https://media.rockstargames.com/chinatownwars/global/downloads/avatars/zhou_256x256.jpg"
+            class="img-responsive"
+            alt=""
+          />
+        </div>-->
+        <!-- END SIDEBAR USERPIC -->
+        <!-- SIDEBAR USER TITLE --><!--
+        <div class="profile-usertitle">
+          <div class="profile-usertitle-name">Jason Davis</div>
+          <div class="profile-usertitle-job">Developer</div>
+        </div>-->
+        <!-- END SIDEBAR USER TITLE -->
+        <!-- SIDEBAR BUTTONS --><!--
+        <div class="profile-userbuttons">
+          <button type="button" class="btn btn-success btn-sm">Follow</button>
+          <button type="button" class="btn btn-danger btn-sm">Message</button>
+        </div>-->
+        <!-- END SIDEBAR BUTTONS -->
+        <!-- SIDEBAR MENU --><!--
+        <div class="profile-usermenu sidebar-sticky">
+          <ul class="nav flex-column">
+            <li class="active nav-item">
+              <a href="#" class="nav-link active">
+                <i class="fa fa-home"></i>
+                Overview
+              </a>
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="https://codepen.io/jasondavis/pen/jVRwaG?editors=1000"
+              >
+                <i class="fa fa-user"></i>
+                Account Settings
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#" target="_blank">
+                <i class="fa fa-check"></i>
+                Tasks
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">
+                <i class="fa fa-flag"></i>
+                Help
+              </a>
+            </li>
+          </ul>
+        </div>-->
+        <!-- END MENU --><!--
+      </div>
+    </div>
+    <div class="col-md-9">
+      <div class="profile-content">
+        Some user related content goes here...
+        <h1>test</h1>
+        <h1>test</h1>
+        <h1>test</h1>
+      </div>
+    </div>
+  </div>
+</div>-->
+<!--
+<div class="container">
+  <div class="row">
+    <div class="col-md-3"></div>
+    <div class="col-md-9 ft">
+      <footer class="footer">
+        <div class="row">
+          <div class="col-md-4">
+            <span class="copyright">Copyright &copy; Your Website 2018</span>
           </div>
-          <!-- END SIDEBAR USERPIC -->
-          <!-- SIDEBAR USER TITLE -->
-          <div class="profile-usertitle">
-            <div class="profile-usertitle-name">
-              Jason Davis
-            </div>
-            <div class="profile-usertitle-job">
-              Developer
-            </div>
-          </div>
-          <!-- END SIDEBAR USER TITLE -->
-          <!-- SIDEBAR BUTTONS -->
-          <div class="profile-userbuttons">
-            <button type="button" class="btn btn-success btn-sm">Follow</button>
-            <button type="button" class="btn btn-danger btn-sm">Message</button>
-          </div>
-          <!-- END SIDEBAR BUTTONS -->
-          <!-- SIDEBAR MENU -->
-          <div class="profile-usermenu sidebar-sticky">
-            <ul class="nav flex-column">
-              <li class="active nav-item">
-                <a href="#" class="nav-link active">
-							<i class="fa fa-home"></i>
-							Overview </a>
+          <div class="col-md-4">
+            <ul class="list-inline social-buttons">
+              <li class="list-inline-item">
+                <a href="https://github.com/ELMORABITYounes">
+                  <i class="fa fa-github"></i>
+                </a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="https://codepen.io/jasondavis/pen/jVRwaG?editors=1000">
-							<i class="fa fa-user"></i>
-							Account Settings </a>
+              <li class="list-inline-item">
+                <a href="https://www.facebook.com/younes.elmorabit.92">
+                  <i class="fa fa-facebook"></i>
+                </a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#" target="_blank">
-							<i class="fa fa-check"></i>
-							Tasks </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">
-							<i class="fa fa-flag"></i>
-							Help </a>
+              <li class="list-inline-item">
+                <a
+                  href="https://www.linkedin.com/in/younes-elmorabit-2a162310b/"
+                >
+                  <i class="fa fa-linkedin"></i>
+                </a>
               </li>
             </ul>
           </div>
-          <!-- END MENU -->
+          <div class="col-md-4">
+            <ul class="list-inline quicklinks">
+              <li class="list-inline-item">
+                <a href="#">Privacy Policy</a>
+              </li>
+              <li class="list-inline-item">
+                <a href="#">Terms of Use</a>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
-      <div class="col-md-9">
-        <div class="profile-content">
-          Some user related content goes here...
-          <h1>test</h1>
-          <h1>test</h1>
-          <h1>test</h1>
-        </div>
-      </div>
+      </footer>
     </div>
   </div>
-<div class="container">
-  <div class="row">
-    <div class="col-md-3">
-    </div>
-    <div class="col-md-9 ft">
-<footer class="footer">
-  <div class="row">
-    <div class="col-md-4">
-      <span class="copyright">Copyright &copy; Your Website 2018</span>
-    </div>
-    <div class="col-md-4">
-      <ul class="list-inline social-buttons">
-        <li class="list-inline-item">
-          <a href="https://github.com/ELMORABITYounes">
-                  <i class="fa fa-github"></i>
-                </a>
+</div>-->
+
+
+
+
+
+<!-------------------------------------------------------------------------------------------------------------------------->
+
+  <div class="head container-fluid">
+      <div class="mt-2 mb-4 pt-2 pl-2">
+        <h1 class="font-weight-bolder text-white text-center">My Profile Account</h1>
+      </div>
+      <div>
+        <a class="nav-link font-weight-bold text-white text-center" style="font-size:25px; text-decoration:underline;" routerLink="/Home">
+          Home
+        </a>
+        <li class="nav-link font-weight-bold text-white d-flex">
+          <strong class="mx-auto" style="font-size:25px;"> My Info. </strong>
         </li>
-        <li class="list-inline-item">
-          <a href="https://www.facebook.com/younes.elmorabit.92">
-                  <i class="fa fa-facebook"></i>
-                </a>
-        </li>
-        <li class="list-inline-item">
-          <a href="https://www.linkedin.com/in/younes-elmorabit-2a162310b/">
-                  <i class="fa fa-linkedin"></i>
-                </a>
-        </li>
-      </ul>
-    </div>
-    <div class="col-md-4">
-      <ul class="list-inline quicklinks">
-        <li class="list-inline-item">
-          <a href="#">Privacy Policy</a>
-        </li>
-        <li class="list-inline-item">
-          <a href="#">Terms of Use</a>
-        </li>
-      </ul>
-    </div>
+      </div>
   </div>
-</footer>
-</div>
+
+
+  <div class="col-md-12">
+  <h4 class="text-center"><strong>MY INFO.</strong></h4>
+
+  <hr>
+
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-4 ">
+        <div class="profile-card-4 text-center"><img src="http://envato.jayasankarkr.in/code/profile/assets/img/profile-4.jpg" class="img img-responsive">
+          <div class="profile-content">
+                      <div class="profile-name">John Doe
+                          <p>@johndoedesigner</p>
+                      </div>
+                      <div class="profile-description">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor.</div>
+                      <div class="row">
+                          <div class="col-xs-4">
+                              <div class="profile-overview">
+                                  <p>TWEETS</p>
+                                  <h4>1300</h4></div>
+                          </div>
+                          <div class="col-xs-4">
+                              <div class="profile-overview">
+                                  <p>FOLLOWERS</p>
+                                  <h4>250</h4></div>
+                          </div>
+                          <div class="col-xs-4">
+                              <div class="profile-overview">
+                                  <p>FOLLOWING</p>
+                                  <h4>168</h4></div>
+                          </div>
+                      </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-8">
+        <form method="post">
+              <div class="row">
+                    <div class="col-md-4">
+                        <div class="profile-img">
+                            <img src="http://envato.jayasankarkr.in/code/profile/assets/img/profile-4.jpg"/>
+                            <div class="file btn btn-lg btn-primary">
+                                Change Photo
+                                <input type="file" name="file"/>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="profile-head">
+                                    <h5>John Doe</h5>
+                                    <h6>Web Developer and Designer </h6>
+                                    <p class="proile-rating">RANKINGS : <span>8/10</span></p>
+                            <ul class="nav nav-tabs" id="myTab" role="tablist">
+                                <li class="nav-item">
+                                    <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">About</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Timeline</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <input type="submit" class="profile-edit-btn" name="btnAddMore" value="Edit Profile"/>
+                    </div>
+              </div>
+              <div class="row">
+                    <div class="col-md-4">
+                        <div class="profile-work">
+                            <p>WORK LINK</p>
+                            <a href="">Website Link</a><br/>
+                            <a href="">Bootsnipp Profile</a><br/>
+                            <a href="">Bootply Profile</a>
+                            <p>SKILLS</p>
+                            <a href="">Web Designer</a><br/>
+                            <a href="">Web Developer</a><br/>
+                            <a href="">WordPress</a><br/>
+                            <a href="">WooCommerce</a><br/>
+                            <a href="">PHP, .Net</a><br/>
+                        </div>
+                    </div>
+                    <div class="col-md-8">
+                        <div class="tab-content profile-tab" id="myTabContent">
+                            <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <label>User Id</label>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <p>John123</p>
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <label>Name</label>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <p>John Doe</p>
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <label>Email</label>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <p>JohnDoe@gmail.com</p>
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <label>Phone</label>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <p>123 456 7890</p>
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <label>Profession</label>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <p>Web Developer and Designer</p>
+                                            </div>
+                                        </div>
+                            </div>
+                            <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <label>Experience</label>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <p>Expert</p>
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <label>Hourly Rate</label>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <p>10$/hr</p>
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <label>Total Projects</label>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <p>230</p>
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <label>English Level</label>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <p>Expert</p>
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <label>Availability</label>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <p>6 months</p>
+                                            </div>
+                                        </div>
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <label>Your Bio</label><br/>
+                                        <p>Your detail description</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+              </div>
+        </form>
+      </div>
+    </div>
   </div>
 </div>
