--- a/src/app/Components/main/main.component.html
+++ b/src/app/Components/main/main.component.html
@@ -1,4 +1,119 @@
-<div class="container">
+
+
+  <div class="container-fluid">
+    <div class="row mt-3">
+      <div class="col-md-12">
+        <div id="demo" class="carousel slide" data-ride="carousel">
+          <ul class="carousel-indicators">
+            <li data-target="#demo" data-slide-to="0" class="active"></li>
+            <li data-target="#demo" data-slide-to="1"></li>
+            <li data-target="#demo" data-slide-to="2"></li>
+            <li data-target="#demo" data-slide-to="3"></li>
+            <li data-target="#demo" data-slide-to="4"></li>
+          </ul>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img
+                src="assets/device 5.jpg"
+                alt="device 5"
+                class="img-responsive"
+                width="100%"
+                height="320px"
+              />
+              <div class="carousel-caption">
+                <div>
+                  <h1 class="text-muted"></h1>
+                  <!-- <a href="#" class="primary-btn text-warning">Shop Now</a> -->
+                </div>
+                <!-- <p>We had such a great time in LA!</p> -->
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img
+                src="assets/device3.jpeg"
+                alt="device3"
+                class="img-responsive"
+                width="100%"
+                height="320px"
+              />
+              <div class="carousel-caption"></div>
+            </div>
+            <div class="carousel-item">
+              <img
+                src="assets/device4.jpg"
+                alt="device4"
+                class="img-responsive"
+                width="100%"
+                height="320px"
+              />
+              <div class="carousel-caption">
+                <!-- <a href="#" class="primary-btn">Shop Now</a> -->
+                <div>
+                  <!-- <h2>Sale <span>50%</span></h2> -->
+                </div>
+                <!-- <p>We love the Big Apple!</p> -->
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img
+                src="assets/camera_category.jpg"
+                alt="device1"
+                class="img-responsive"
+                width="100%"
+                height="320px"
+              />
+              <div class="carousel-caption">
+                <div>
+                  <h1>Black friday</h1>
+                  <a href="#" class="primary-btn">Shop Now</a>
+                </div>
+                <div>
+                  <h2>Sale <span>50%</span></h2>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img
+                src="assets/device2.jpeg"
+                alt="device2"
+                class="img-responsive"
+                width="100%"
+                height="320px"
+              />
+              <div class="carousel-caption">
+                <div class="container">
+                  <div class="row">
+                    <div class="col-lg-5">
+                      <h1>Black friday</h1>
+                      <!-- <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                        sed do eiusmod tempor incididunt ut labore et dolore
+                      </p> -->
+                      <!-- <a href="#" class="primary-btn">Shop Now</a> -->
+                    </div>
+                  </div>
+                  <div class="off-card">
+                    <!-- <h2>Sale <span>50%</span></h2> -->
+                  </div>
+                </div>
+                <!-- <h3>New York</h3> -->
+                <p>We love the Big Apple!</p>
+              </div>
+            </div>
+
+            <a class="carousel-control-prev" href="#demo" data-slide="prev">
+              <span class="carousel-control-prev-icon"></span>
+            </a>
+            <a class="carousel-control-next" href="#demo" data-slide="next">
+              <span class="carousel-control-next-icon"></span>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
 
   <div class="row mt-3">
     <div class="col-lg-3 col-md-3 col-xl-3 " *ngFor="let item of data  | paginate: {
